--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         </aside>
 
         <div class="container">
-            <header class="site-head"></header>
+            <header class="site-head">
+                <a class="btn" href="#">Effettua l'Upgrade</a>
+            </header>
             <nav class="site-nav"></nav>
         </div>
     </main>
