--- a/index.html
+++ b/index.html
@@ -89,7 +89,57 @@
             <nav class="site-nav"></nav>
         </div>
     </main>
-    <footer class="site-footer"></footer>
+    <footer class="site-footer">
+
+        <div class="track">
+            <div class="track-img">
+                <a href="#"><img src="./img/sinister.jpeg" alt="Una Mattina Album"></a>
+            </div>
+            <div class="track-info">
+                <h5>Sinister</h5>
+                <a href="#">
+                    <span>Brano Nome</span>
+                </a>
+            </div>
+            <div class="track-icons">
+                <a href="#"><i class="fa-regular fa-heart"></i></a>
+                <a href="#"><i class="fa-regular fa-folder"></i></a>
+            </div>
+
+        </div>
+
+        <div class="main-controls">
+            <div class="track-controls">
+                <a href="#"><i class="fa-solid fa-shuffle"></i></a>
+                <a href="#"><i class="fa-solid fa-backward-step"></i></a>
+                <a href="#"><i class="fa-regular fa-circle-play fa-2xl"></i></a>
+                <a href="#"><i class="fa-solid fa-forward-step"></i></a>
+                <a href="#"><i class="fa-solid fa-rotate-right"></i></a>
+            </div>
+            <div class="container-track-bar">
+                <span>01:47</span>
+                <div class="track-bar">
+                    <div class="white-bar"></div>
+                    <div class="gray-bar"></div>
+                </div>
+                <span>05:57</span>
+            </div>
+        </div>
+        <div class="right-controls">
+            <div class="device-controls">
+                <i class="fa-solid fa-list"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-volume-high"></i>
+            </div>
+
+            <div class="track-bar">
+                <div class="white-bar"></div>
+                <div class="gray-bar"></div>
+            </div>
+        </div>
+
+
+    </footer>
 
 </body>
 
