--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <main class="site-main">
+        <!--Sidebar-->
         <aside class="sidebar">
             <div class="logo-section">
                 <img src="./img/logo.svg" alt="">
@@ -76,17 +77,25 @@
 
                 </div>
             </div>
-
-
-
-
         </aside>
-
+        <!--container-->
         <div class="container">
             <header class="site-head">
                 <a class="btn" href="#">Effettua l'Upgrade</a>
             </header>
-            <nav class="site-nav"></nav>
+
+            <nav class="site-nav">
+                <ul>
+                    <li><a href="#">in evidenza</a></li>
+                    <li><a href="#">podcast</a></li>
+                    <li><a href="#">classifiche</a></li>
+                    <li><a href="#">generi e mood</a></li>
+                    <li><a href="#">nuove uscite</a></li>
+                    <li><a href="#">scopri</a></li>
+                </ul>
+
+
+            </nav>
         </div>
     </main>
     <footer class="site-footer">
