fine sezione container

--- a/index.html
+++ b/index.html
@@ -96,7 +96,111 @@
 
 
             </nav>
-        </div>
+
+            <div class="recently-played">
+                <h1>Recently Played</h1>
+                <div class="playlist-container">
+                    <div class="playlist-type">
+                        <div class="image-container">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                        </div>
+                        <a href="#">
+                            <h2>Heavy Metal</h2>
+                        </a>
+                        <a href="#"><span>subtitle</span></a>
+                    </div>
+
+                    <div class="playlist-type">
+                        <div class="image-container">
+                            <img src="./img/stranger.jpeg" alt="">
+                        </div>
+                        <a href="#">
+                            <h2>Stranger Things, Vol. 1 (a Netflix original series Soundtrack)</h2>
+                        </a>
+                        <a href="#"><span>Kyle Dixon & Michael Stain</span></a>
+                    </div>
+
+                    <div class="playlist-type">
+                        <div class="image-container">
+                            <img src="./img/aquietplace.jpeg" alt="">
+                        </div>
+                        <a href="#">
+                            <h2>A quiet place</h2>
+                        </a>
+                        <a href="#"><span>subtitle</span></a>
+                    </div>
+
+                    <div class="playlist-type">
+                        <div class="image-container">
+                            <img src="./img/split.jpeg" alt="">
+                        </div>
+                        <a href="#">
+                            <h2>Split</h2>
+                        </a>
+                        <a href="#"><span>subtitle</span></a>
+                    </div>
+
+                    <div class="playlist-type">
+                        <div class="image-container">
+                            <img src="./img/cure.jpeg" alt="">
+                        </div>
+                        <a href="#">
+                            <h2>A cure for wellness</h2>
+                        </a>
+                        <a href="#"><span>subtitle</span></a>
+                    </div>
+                    <div class="playlist-type">
+                        <div class="image-container">
+                            <img src="./img/sinister.jpeg" alt="">
+                        </div>
+                        <a href="#">
+                            <h2>Sinister</h2>
+                        </a>
+                        <a href="#"><span>subtitle</span></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="created-for">
+                <h1>Creato per John Doe</h1>
+                <span>Più ascolti più accurati saranno i suggerimenti</span>
+
+                <div class="playlist-container">
+                    <div class="playlist-type">
+                        <div class="img-container">
+                            <img src="img/radar.jpeg" alt=< a href="#">
+                            <h2>Release Radar</h2>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="popular-artist">
+                <h1>Artisti più Popolari</h1>
+                <span>Più ascolti più accurati saranno i suggerimenti</span>
+                <div class="playlist-container">
+
+                    <div class="playlist-type">
+                        <div class="img-container">
+                            <img class="circle-img" src="./img/youg.jpeg" alt="Coldplay">
+                        </div>
+                        <a href="#">
+                            <h2>Lana Del Rey</h2>
+                        </a>
+                    </div>
+
+                    <div class="playlist-type">
+                        <div class="img-container">
+                            <img class="circle-img" src="img/einaudi.jpeg" alt="Ludovico Einaudi">
+                        </div>
+                        <a href="#">
+                            <h2>Ludovico Einaudi</h2>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
     </main>
     <footer class="site-footer">
 
