--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         </aside>
         <!--container-->
         <div class="container">
-            <header class="site-head">
+            <div class="site-head">
                 <a class="btn" href="#">Effettua l'Upgrade</a>
-            </header>
+            </div>
 
             <nav class="site-nav">
                 <ul>
@@ -96,13 +96,14 @@
 
 
             </nav>
-
+            <!--playlist-->
             <div class="recently-played">
                 <h1>Recently Played</h1>
                 <div class="playlist-container">
                     <div class="playlist-type">
                         <div class="image-container">
                             <img src="./img/metal_lifting.jpg" alt="">
+                            <i class="fa-regular fa-circle-play fa-2xl"></i>
                         </div>
                         <a href="#">
                             <h2>Heavy Metal</h2>
@@ -113,6 +114,7 @@
                     <div class="playlist-type">
                         <div class="image-container">
                             <img src="./img/stranger.jpeg" alt="">
+                            <i class="fa-regular fa-circle-play fa-2xl"></i>
                         </div>
                         <a href="#">
                             <h2>Stranger Things, Vol. 1 (a Netflix original series Soundtrack)</h2>
@@ -123,6 +125,7 @@
                     <div class="playlist-type">
                         <div class="image-container">
                             <img src="./img/aquietplace.jpeg" alt="">
+                            <i class="fa-regular fa-circle-play fa-2xl"></i>
                         </div>
                         <a href="#">
                             <h2>A quiet place</h2>
@@ -133,6 +136,7 @@
                     <div class="playlist-type">
                         <div class="image-container">
                             <img src="./img/split.jpeg" alt="">
+                            <i class="fa-regular fa-circle-play fa-2xl"></i>
                         </div>
                         <a href="#">
                             <h2>Split</h2>
@@ -143,6 +147,7 @@
                     <div class="playlist-type">
                         <div class="image-container">
                             <img src="./img/cure.jpeg" alt="">
+                            <i class="fa-regular fa-circle-play fa-2xl"></i>
                         </div>
                         <a href="#">
                             <h2>A cure for wellness</h2>
@@ -152,6 +157,7 @@
                     <div class="playlist-type">
                         <div class="image-container">
                             <img src="./img/sinister.jpeg" alt="">
+                            <i class="fa-regular fa-circle-play fa-2xl"></i>
                         </div>
                         <a href="#">
                             <h2>Sinister</h2>
@@ -167,9 +173,11 @@
 
                 <div class="playlist-container">
                     <div class="playlist-type">
-                        <div class="img-container">
-                            <img src="img/radar.jpeg" alt=< a href="#">
-                            <h2>Release Radar</h2>
+                        <div class="image-container">
+                            <img src="img/radar.jpeg" alt="">
+                            <i class="fa-regular fa-circle-play fa-2xl"></i>
+                            <a href="#">
+                                <h2>Release Radar</h2>
                             </a>
                         </div>
                     </div>
@@ -182,8 +190,9 @@
                 <div class="playlist-container">
 
                     <div class="playlist-type">
-                        <div class="img-container">
+                        <div class="image-container">
                             <img class="circle-img" src="./img/youg.jpeg" alt="Coldplay">
+                            <i class="fa-regular fa-circle-play fa-2xl"></i>
                         </div>
                         <a href="#">
                             <h2>Lana Del Rey</h2>
@@ -191,8 +200,9 @@
                     </div>
 
                     <div class="playlist-type">
-                        <div class="img-container">
+                        <div class="image-container">
                             <img class="circle-img" src="img/einaudi.jpeg" alt="Ludovico Einaudi">
+                            <i class="fa-regular fa-circle-play fa-2xl"></i>
                         </div>
                         <a href="#">
                             <h2>Ludovico Einaudi</h2>
@@ -200,6 +210,7 @@
                     </div>
                 </div>
             </div>
+        </div>
 
     </main>
     <footer class="site-footer">
@@ -225,7 +236,7 @@
             <div class="track-controls">
                 <a href="#"><i class="fa-solid fa-shuffle"></i></a>
                 <a href="#"><i class="fa-solid fa-backward-step"></i></a>
-                <a href="#"><i class="fa-regular fa-circle-play fa-2xl"></i></a>
+                <a href="#"><i class="fa-regular fa-circle-play fa-2xl play"></i></a>
                 <a href="#"><i class="fa-solid fa-forward-step"></i></a>
                 <a href="#"><i class="fa-solid fa-rotate-right"></i></a>
             </div>
