--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <nav class="site-nav">
                 <ul>
-                    <li><a href="#">in evidenza</a></li>
+                    <li><a class="active" href="#">in evidenza</a></li>
                     <li><a href="#">podcast</a></li>
                     <li><a href="#">classifiche</a></li>
                     <li><a href="#">generi e mood</a></li>
