aggiunte media query

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 
             <div class="list">
                 <ul>
-                    <li><a href="">Top Hits Italia</a></li>
-                    <li><a href="">Alta Rotazione</a></li>
-                    <li><a href="">Indie Italia</a></li>
-                    <li><a href="">Big Italiani</a></li>
-                    <li><a href="">Graffiti Pop</a></li>
-                    <li><a href="">Casa Dolce Casa</a></li>
-                    <li><a href="">Zona Trap</a></li>
+                    <li><a href="">Nome Playlist</a></li>
+                    <li><a href="">Nome Playlist</a></li>
+                    <li><a href="">Nome Playlist</a></li>
+                    <li><a href="">Nome Playlist</a></li>
+                    <li><a href="">Nome Playlist</a></li>
+                    <li><a href="">Nome Playlist</a></li>
+                    <li><a href="">Nome Playlist</a></li>
                 </ul>
             </div>
 
@@ -181,6 +181,15 @@
                             </a>
                         </div>
                     </div>
+                    <div class="playlist-type">
+                        <div class="image-container">
+                            <img src="img/mixdaily.jpeg" alt="">
+                            <i class="fa-regular fa-circle-play fa-2xl"></i>
+                            <a href="#">
+                                <h2>Daily Mix 1</h2>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -261,6 +270,7 @@
                 <div class="gray-bar"></div>
             </div>
         </div>
+
 
 
     </footer>
