--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="navigation">
 
-                <div class="home">
+                <div class="home active">
                     <img src="./img/home.svg" alt="">
                     <a href=""><span>Home</span></a>
                 </div>
@@ -176,19 +176,19 @@
                         <div class="image-container">
                             <img src="img/radar.jpeg" alt="">
                             <i class="fa-regular fa-circle-play fa-2xl"></i>
-                            <a href="#">
-                                <h2>Release Radar</h2>
-                            </a>
                         </div>
+                        <a href="#">
+                            <h2>Release Radar</h2>
+                        </a>
                     </div>
                     <div class="playlist-type">
                         <div class="image-container">
                             <img src="img/mixdaily.jpeg" alt="">
                             <i class="fa-regular fa-circle-play fa-2xl"></i>
-                            <a href="#">
-                                <h2>Daily Mix 1</h2>
-                            </a>
                         </div>
+                        <a href="#">
+                            <h2>Daily Mix 1</h2>
+                        </a>
                     </div>
                 </div>
             </div>
