--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Spotify</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,9 +22,8 @@
             <div class="logo-section">
                 <img src="./img/logo.svg" alt="">
             </div>
-
+            <!--Sez. navigation-->
             <div class="navigation">
-
                 <div class="home active">
                     <img src="./img/home.svg" alt="">
                     <a href=""><span>Home</span></a>
@@ -39,7 +39,7 @@
                     <a href=""><span>Library</span></a>
                 </div>
             </div>
-
+            <!--sez. playlist titolo e icona-->
             <div class="playlist">
                 <h5>Playlist</h5>
                 <div class="crea">
@@ -50,7 +50,7 @@
                 </div>
 
             </div>
-
+            <!--Lista playlist-->
             <div class="list">
                 <ul>
                     <li><a href="">Nome Playlist</a></li>
@@ -62,7 +62,7 @@
                     <li><a href="">Nome Playlist</a></li>
                 </ul>
             </div>
-
+            <!-- sezione finale, nome utente e installa app-->
             <div class="side-footer">
                 <div class="install">
                     <i class="fa-solid fa-arrow-down"></i>
@@ -78,12 +78,15 @@
                 </div>
             </div>
         </aside>
-        <!--container-->
+
+        <!--container principale-->
         <div class="container">
+            <!--barra con effettua upgrade-->
             <div class="site-head">
                 <a class="btn" href="#">Effettua l'Upgrade</a>
             </div>
 
+            <!--navigazione playlist-->
             <nav class="site-nav">
                 <ul>
                     <li><a class="active" href="#">in evidenza</a></li>
@@ -93,9 +96,8 @@
                     <li><a href="#">nuove uscite</a></li>
                     <li><a href="#">scopri</a></li>
                 </ul>
-
-
             </nav>
+
             <!--playlist-->
             <div class="recently-played">
                 <h1>Recently Played</h1>
@@ -223,7 +225,7 @@
 
     </main>
     <footer class="site-footer">
-
+        <!--nome traccia, img album e icone-->
         <div class="track">
             <div class="track-img">
                 <a href="#"><img src="./img/sinister.jpeg" alt="Una Mattina Album"></a>
@@ -238,9 +240,9 @@
                 <a href="#"><i class="fa-regular fa-heart"></i></a>
                 <a href="#"><i class="fa-regular fa-folder"></i></a>
             </div>
-
         </div>
 
+        <!--controlli audio principali-->
         <div class="main-controls">
             <div class="track-controls">
                 <a href="#"><i class="fa-solid fa-shuffle"></i></a>
@@ -249,6 +251,8 @@
                 <a href="#"><i class="fa-solid fa-forward-step"></i></a>
                 <a href="#"><i class="fa-solid fa-rotate-right"></i></a>
             </div>
+
+            <!--trackbar-->
             <div class="container-track-bar">
                 <span>01:47</span>
                 <div class="track-bar">
@@ -258,6 +262,8 @@
                 <span>05:57</span>
             </div>
         </div>
+
+        <!--controlli dispositivo e trackbar-->
         <div class="right-controls">
             <div class="device-controls">
                 <i class="fa-solid fa-list"></i>
